--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -68,3 +68,9 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+#app {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
