--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -3,6 +3,7 @@
 	border: 1px solid;
 	padding: 4px 8px;
 	background-color: #fff;
+	z-index: 1001;
 	&::after {
 		position: absolute;
 		left: 50%;
@@ -25,15 +26,20 @@
 	}
 }
 .chart_box {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	position: relative;
 	width: 100%;
-	height: 100%;
+	// height: 100%;
 	background-color: #333;
+	color: #fff;
 }
 .mid {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 100vw;
+	width: 100%;
 	// height: 100vh;
 }
